      \item There now is a genuine \code{"function"} method for
      \code{plot()} rather than the generic dispatching internally to
      \code{graphics::plot.function()}.  It is now exported, so can be
      called directly as \code{plot.function()}.
      
      \item The one-sided \code{ks.test()} allows \code{exact = TRUE} to
      be specified in the presence of ties (but the approximate
      calculation remains the default).
    }
  }
  
  \subsection{GRAPHICS DEVICES}{
    \itemize{
      \item The \code{pdf()} device makes use of Flate compression: this
      controlled by the new logical argument \code{compress}, and is
      enabled by default.
      
      \item Devices \code{svg()}, \code{cairo_pdf()} and
      \code{cairo_ps()} gain a \code{family} argument.

      On a Unix-alike \code{X11()} gains a \code{family} argument.  This
      is one of the \code{x11.options()} and so can be passed as an
      argument to the \code{bmp()}, \code{jpeg()}, \code{png()} and
      \code{tiff()} devices.

      Analogous changes have been made on Windows, so all \R graphics
      devices now have a \code{family} argument except \code{pictex()}
      (which has no means to change fonts).

      \item The \code{bmp()}, \code{jpeg()}, \code{png()} and \code{tiff()}
      devices now make use of the \code{antialias} argument for
      \code{type = "quartz"}.

      \item There are several new built-in font mappings for
      \code{X11(type = "Xlib")}: see the help on \code{X11Fonts()}.

      \item There is a new type \code{X11(type = "dbcairo")} which
      updates the screeen less frequently: see its help page.
      
      \item The \code{X11()} device now makes use of cursors to
      distinguish its states.  The normal cursor is an arrow (rather
      than a crosshair); the crosshair is used when the locator is in
      use, and a watch cursor is shown when plotting computations are
      being done.  (These are the standard names for X11 cursors: how