@@ -15,12 +15,13 @@
 #  http://www.r-project.org/Licenses/
 
 curve <- function(expr, from = NULL, to = NULL, n = 101, add = FALSE,
-                  type = "l", ylab = NULL, log = NULL, xlim = NULL, ...)
+                  type = "l", xname = "x", xlab = xname,
+                  ylab = NULL, log = NULL, xlim = NULL, ...)
 {
     sexpr <- substitute(expr)
     if (is.name(sexpr)) {
         ## beter than parse() !
-        expr <- call(as.character(sexpr), quote(x))
+        expr <- call(as.character(sexpr), as.name(xname))
     } else {
 	if ( !( (is.call(sexpr) || is.expression(sexpr)) &&
               "x" %in% all.vars(sexpr) ))
@@ -28,30 +29,36 @@ curve <- function(expr, from = NULL, to = NULL, n = 101, add = FALSE,
 	expr <- sexpr
     }
     if (is.null(ylab)) ylab <- deparse(expr)
-    if (is.null(xlim))
-	delayedAssign("lims",
-		  {pu <- par("usr")[1L:2L]
-		   if (par("xaxs") == "r") pu <- extendrange(pu, f = -1/27)
-		   if (par("xlog")) 10^pu else pu })
-    else lims <- xlim
-    if (is.null(from)) from <- lims[1L]
-    if (is.null(to)) to <- lims[2L]
+    if (is.null(from) || is.null(to)) {
+        xl <- if (!is.null(xlim)) xlim
+        else if (dev.cur() > 1L) {
+            ## determine xlim of current plot.
+            ## NB: we do this even for add = FALSE.
+            pu <- par("usr")[1L:2L]
+            if (par("xaxs") == "r") pu <- extendrange(pu, f = -1/27)
+            if (par("xlog")) 10^pu else pu
+       } else c(0, 1) # was c(1/27, 26/27) in R < 2.14.0
+        if (is.null(from)) from <- xl[1L]
+        if (is.null(to)) to <- xl[2L]
+    }
     lg <-
         if (length(log)) log
-        else paste(if (add && par("xlog"))"x",
-                   if (add && par("ylog"))"y", sep="")
+        else paste(if (add && par("xlog")) "x",
+                   if (add && par("ylog")) "y", sep = "")
     if (length(lg) == 0) lg <- ""
-    if (grepl("x", lg, fixed = TRUE)) {
+    if (grepl(xname, lg, fixed = TRUE)) {
         if (from <= 0 || to <= 0)
             stop("'from' and 'to' must be > 0 with log=\"x\"")
         x <- exp(seq.int(log(from), log(to), length.out = n))
     } else x <- seq.int(from, to, length.out = n)
-    y <- eval(expr, envir = list(x = x), enclos = parent.frame())
+    ll <- list(x = x); names(ll) <- xname
+    y <- eval(expr, envir = ll, enclos = parent.frame())
     if (length(y) != length(x))
         stop("'expr' did not evaluate to an object of length 'n'")
     if (add)
 	lines(x = x, y = y, type = type, ...)
     else
-	plot(x = x, y = y, type = type, ylab = ylab, xlim = xlim, log = lg, ...)
+        plot(x = x, y = y, type = type, xlab = xlab, ylab = ylab,
+             xlim = xlim, log = lg, ...)
     invisible(list(x = x, y = y))
 }
