@@ -31,7 +31,9 @@ plot.function <-
 	if(missing(from)) from <- xlim[1L]
 	if(missing(to))	to <- xlim[2L]
     }
-    if (is.null(ylab)) ylab <- paste(substitute(x), "(x)", sep = "")
+    xname <- list(...)[["xname"]]
+    if (is.null(xname)) xname <- "x"
+    if (is.null(ylab)) ylab <- paste(substitute(x), "(", xname, ")", sep = "")
     ## name args to avoid partial matches from ...
     curve(expr = x, from = from, to = to, xlim = xlim, ylab = ylab, ...)
 }
